Add feedback to be part of the story

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         </li>
                         <li class="timeline-inverted">
                         <a href="">
-                            <div class="timeline-image">
+                            <div class="timeline-image story">
                                 <h4>Be Part
                                     <br>Of The
                                     <br>Story!</h4>
