--- a/index.html
+++ b/index.html
@@ -187,60 +187,138 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading topic-margin">Our Amazing Speakers</h2>
+                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Kay Garland</h4>
-                        <p class="text-muted">Lead Designer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <div class="iyin img-responsive img-circle">
+                        </div>
+                        <h4>Iyinoluwa Aboyeji</h4>
+                        <p class="text-muted">(2014)</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Marketer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <div class="kent img-responsive img-circle">
+                        </div>
+                        <h4>Akpo Kentebe</h4>
+                        <p class="text-muted">(2012, 2011)</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <div class="kent img-responsive img-circle">
+                        </div>
+                        <h4>Osas Egbo</h4>
+                        <p class="text-muted">(2011)</p>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="kent img-responsive img-circle">
+                        </div>
+                        <h4>Seye Amusa</h4>
+                        <p class="text-muted">(2011, 2010, 2009)</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="ola img-responsive img-circle">
+                        </div>
+                        <h4>Seyi Ola Daniels</h4>
+                        <p class="text-muted">(2011)</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="fisayo img-responsive img-circle">
+                        </div>
+                        <h4>Fisayo Okunsanya</h4>
+                        <p class="text-muted">(2011)</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="boye img-responsive img-circle">
+                        </div>
+                        <h4>Olaboye Ajayi</h4>
+                        <p class="text-muted">(2010)</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="nduka img-responsive img-circle">
+                        </div>
+                        <h4>Nduka Okoisor</h4>
+                        <p class="text-muted">(2010)</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="aruosa img-responsive img-circle">
+                        </div>
+                        <h4>Aruosa Osemwegie</h4>
+                        <p class="text-muted">(2010)</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="bisi img-responsive img-circle">
+                        </div>
+                        <h4>Bisi Olawuyi</h4>
+                        <p class="text-muted">(2010)</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="lola img-responsive img-circle">
+                        </div>
+                        <h4>Lola Esan</h4>
+                        <p class="text-muted">(2009)</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="yetunde img-responsive img-circle">
+                        </div>
+                        <h4>Yetunde Babaeko</h4>
+                        <p class="text-muted">(2009)</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="niyi img-responsive img-circle">
+                        </div>
+                        <h4>Niyi Adesanya</h4>
+                        <p class="text-muted">(2008)</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="rugged img-responsive img-circle">
+                        </div>
+                        <h4>Rugged Man Okechukwu Stephens</h4>
+                        <p class="text-muted">(2008)</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="duke img-responsive img-circle">
+                        </div>
+                        <h4>MAME Duku Elamah</h4>
+                        <p class="text-muted">(2008)</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="omowunmi img-responsive img-circle">
+                        </div>
+                        <h4>Omowunmi Adeoye</h4>
+                        <p class="text-muted">(2008)</p>
+                    </div>
                 </div>
             </div>
         </div>
