--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                        <a href="">
+                        <a class="page-scroll" href="#contact">
                             <div class="timeline-image story">
                                 <h4>Be Part
                                     <br>Of The
@@ -325,8 +325,6 @@
 
         </div>
     </section>
-
-git checkout --orphan gh-pages
 
 <!-- Portfolio Grid Section -->
     <section id="portfolio">
