--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                     <h4 class="subheading">Health and Education Hackathon</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">"Session information Here (Not compulsory, I can take it out)"</p>
                                 </div>
                             </div>
                         </li>
@@ -150,7 +150,7 @@
                                     <h4 class="subheading">Tech Session</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">"Session information Here (Not compulsory, I can take it out)"<p>
                                 </div>
                             </div>
                         </li>
