--- a/index.html
+++ b/index.html
@@ -195,10 +195,44 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
+                        <div class="marek img-responsive img-circle">
+                        </div>
+                        <h4>Marek Zmylowski</h4>
+                        <p class="text-muted">(2015)</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="oo img-responsive img-circle">
+                        </div>
+                        <h4>O.O. Nwoye</h4>
+                        <p class="text-muted">(2015)</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="amaka img-responsive img-circle">
+                        </div>
+                        <h4>Amaka Kentebe</h4>
+                        <p class="text-muted">(2015)</p>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="yomi img-responsive img-circle">
+                        </div>
+                        <h4>Oluyomi Ojo</h4>
+                        <p class="text-muted">(2015)</p>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="team-member">
                         <div class="iyin img-responsive img-circle">
                         </div>
                         <h4>Iyinoluwa Aboyeji</h4>
-                        <p class="text-muted">(2014)</p>
+                        <p class="text-muted">(2015, 2014)</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -206,23 +240,15 @@
                         <div class="kent img-responsive img-circle">
                         </div>
                         <h4>Akpo Kentebe</h4>
-                        <p class="text-muted">(2012, 2011)</p>
+                        <p class="text-muted">(2015, 2012, 2011)</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <div class="kent img-responsive img-circle">
+                        <div class="osas img-responsive img-circle">
                         </div>
                         <h4>Osas Egbo</h4>
                         <p class="text-muted">(2011)</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <div class="seye img-responsive img-circle">
-                        </div>
-                        <h4>Seye Amusa</h4>
-                        <p class="text-muted">(2011, 2010, 2009)</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -241,6 +267,15 @@
                         <p class="text-muted">(2011)</p>
                     </div>
                 </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <div class="seye img-responsive img-circle">
+                        </div>
+                        <h4>Seye Amusa</h4>
+                        <p class="text-muted">(2011, 2010, 2009)</p>
+                    </div>
+                </div>
+
                 <div class="col-sm-4">
                     <div class="team-member">
                         <div class="boye img-responsive img-circle">
@@ -313,7 +348,6 @@
                         <p class="text-muted">(2008)</p>
                     </div>
                 </div>
-            </div>
                 <div class="col-sm-4">
                   <div class="team-member">
                       <div class="omowunmi img-responsive img-circle">
@@ -322,7 +356,7 @@
                       <p class="text-muted">(2008)</p>
                   </div>
               </div>
-
+            </div>
         </div>
     </section>
 
