--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                                     <h4>18th September, 2015. 10.00am</h4>
                                     <h4 class="subheading">Health and Education Hackathon</h4>
                                 </div>
-                                <div class="timeline-body">
+<!--                                 <div class="timeline-body">
                                     <p class="text-muted">"Session information Here (Not compulsory, I can take it out)"</p>
                                 </div>
-                            </div>
+ -->                            </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
@@ -149,10 +149,10 @@
                                     <h4>19th September, 2015. 10.00am - 1.00pm</h4>
                                     <h4 class="subheading">Tech Session</h4>
                                 </div>
-                                <div class="timeline-body">
+<!--                                 <div class="timeline-body">
                                     <p class="text-muted">"Session information Here (Not compulsory, I can take it out)"<p>
                                 </div>
-                            </div>
+ -->                            </div>
                         </li>
                         <li>
                             <div class="timeline-image">
@@ -193,166 +193,194 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="marek img-responsive img-circle">
                         </div>
                         <h4>Marek Zmylowski</h4>
+                        <p class="text-muted speaker-title">Co Founder Jovago</p>
                         <p class="text-muted">(2015)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="oo img-responsive img-circle">
                         </div>
                         <h4>O.O. Nwoye</h4>
+                        <p class="text-muted speaker-title">Co Founder, CALLBASE</p>
                         <p class="text-muted">(2015)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="amaka img-responsive img-circle">
                         </div>
                         <h4>Amaka Kentebe</h4>
+                        <p class="text-muted speaker-title">Founder, SCUUP</p>
                         <p class="text-muted">(2015)</p>
                     </div>
                 </div>
-
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
+                    <div class="team-member">
+                        <div class="oo img-responsive img-circle">
+                        </div>
+                        <h4>Oluseun Onigbide</h4>
+                        <p class="text-muted speaker-title">Co Founder, CALLBASE</p>
+                        <p class="text-muted">(2015)</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="yomi img-responsive img-circle">
                         </div>
                         <h4>Oluyomi Ojo</h4>
+                        <p class="text-muted speaker-title">Chief Idea Officer, Printivo.</p>
                         <p class="text-muted">(2015)</p>
                     </div>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="iyin img-responsive img-circle">
                         </div>
                         <h4>Iyinoluwa Aboyeji</h4>
+                        <p class="text-muted speaker-title">Co Founder, Andela</p>
                         <p class="text-muted">(2015, 2014)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="kent img-responsive img-circle">
                         </div>
                         <h4>Akpo Kentebe</h4>
+                        <p class="text-muted speaker-title">CEO, Sod Bond Developments</p>
                         <p class="text-muted">(2015, 2012, 2011)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="osas img-responsive img-circle">
                         </div>
                         <h4>Osas Egbo</h4>
+                        <p class="text-muted speaker-title">Senior H.R Consultant , Stanbic IBTC</p>
                         <p class="text-muted">(2011)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="ola img-responsive img-circle">
                         </div>
                         <h4>Seyi Ola Daniels</h4>
+                        <p class="text-muted speaker-title">Lead Strategist, Petravantage Services</p>
                         <p class="text-muted">(2011)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="fisayo img-responsive img-circle">
                         </div>
                         <h4>Fisayo Okunsanya</h4>
+                        <p class="text-muted speaker-title">Project delivery Lead, Ark Minster Business Services</p>
                         <p class="text-muted">(2011)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="seye img-responsive img-circle">
                         </div>
                         <h4>Seye Amusa</h4>
+                        <p class="text-muted speaker-title">Business Development, KOGNO</p>
                         <p class="text-muted">(2011, 2010, 2009)</p>
                     </div>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="boye img-responsive img-circle">
                         </div>
                         <h4>Olaboye Ajayi</h4>
+                        <p class="text-muted speaker-title">Senior Sales Manager, General Electric</p>
                         <p class="text-muted">(2010)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="nduka img-responsive img-circle">
                         </div>
                         <h4>Nduka Okoisor</h4>
+                        <p class="text-muted speaker-title">Head Talent Mgt AIRTEL</p>
                         <p class="text-muted">(2010)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="aruosa img-responsive img-circle">
                         </div>
                         <h4>Aruosa Osemwegie</h4>
+                        <p class="text-muted speaker-title">HR Consultant, Author 'Getting a Job is a Job'</p>
                         <p class="text-muted">(2010)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="bisi img-responsive img-circle">
                         </div>
                         <h4>Bisi Olawuyi</h4>
+                        <p class="text-muted speaker-title">Professor of Communication and Language Art</p>
                         <p class="text-muted">(2010)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="lola img-responsive img-circle">
                         </div>
                         <h4>Lola Esan</h4>
+                        <p class="text-muted speaker-title">Strategy and Change Mgt PWC</p>
                         <p class="text-muted">(2009)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="yetunde img-responsive img-circle">
                         </div>
                         <h4>Yetunde Babaeko</h4>
+                        <p class="text-muted speaker-title">Camara Studios</p>
                         <p class="text-muted">(2009)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="niyi img-responsive img-circle">
                         </div>
                         <h4>Niyi Adesanya</h4>
+                        <p class="text-muted speaker-title">Fifth gear plus</p>
                         <p class="text-muted">(2008)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="rugged img-responsive img-circle">
                         </div>
-                        <h4>Rugged Man Okechukwu Stephens</h4>
+                        <h4>Rugged Man</h4>
+                        <p class="text-muted speaker-title">Musician</p>
                         <p class="text-muted">(2008)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <div class="team-member">
                         <div class="duke img-responsive img-circle">
                         </div>
                         <h4>MAME Duku Elamah</h4>
+                        <p class="text-muted speaker-title">Senior Talent Acquisition Specialist Standard Chartered</p>
                         <p class="text-muted">(2008)</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                   <div class="team-member">
                       <div class="omowunmi img-responsive img-circle">
                       </div>
                       <h4>Omowunmi Adeoye</h4>
+                      <p class="text-muted speaker-title">Learning and Development Instructor CBN</p>
                       <p class="text-muted">(2008)</p>
                   </div>
               </div>
@@ -525,27 +553,27 @@
         </div>
     </section>
     <!-- Clients Aside -->
-    <aside class="clients bg-light-gray">
+<!--     <aside class="clients bg-light-gray">
         <div class="container center">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-3  col-xs-3">
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-3 col-xs-3">
                     <a href="#">
                         <img src="img/andela-logo.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-3 col-xs-3">
                     <a href="#">
                         <img src="img/andela-logo.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-3 col-xs-3">
                 </div>
             </div>
         </div>
     </aside>
-
+ -->
 
 
     <!-- Contact Section -->
@@ -553,37 +581,44 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading topic-margin">Contact Us</h2>
+                    <h2 class="section-heading topic-margin">Register</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <form name="sentMessage" id="ss-form" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <input type="text" class="form-control" name="entry.1054600659"  placeholder="Your Name *" id="entry_1054600659" required data-validation-required-message="Please enter your name.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <input name="entry.338411279" id="entry_338411279" type="email" class="form-control" placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <input name="entry.1865495675" type="tel" class="form-control" placeholder="Your Phone *" id="entry_1865495675" required data-validation-required-message="Please enter your phone number.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
+                              <div class="form-group">
+                                <select name="entry.1682894312" id="entry_1682894312" class="form-control hackathon">
+                                  <option value="0">What are you registering for?</option>
+                                  <option value="Hackathon">Hackathon</option>
+                                  <option value="Sessions">Sessions</option>
+                                </select>
+                              </div>
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <textarea disabled="disabled" name="entry.1035444962" class="form-control" placeholder="Team Members" id="entry_1035444962" required data-validation-required-message="Please enter a message."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
+                                <button type="submit" class="btn btn-xl">Register</button>
                             </div>
                         </div>
                     </form>
