--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Wake Up and Smeel the Coffee</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Wake Up and Smell the Coffee</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -121,7 +121,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">EVENT TIMELINE</h2>
-                    <h3 class="section-subheading text-muted">2015</h3>
+                    <h3 class="section-subheading text-muted event-year">2015</h3>
+                    <h3 class="section-subheading text-muted quick-info">1000+ students, 6 campuses</h3>
+
                 </div>
             </div>
             <div class="row">
@@ -136,10 +138,10 @@
                                     <h4>18th September, 2015. 10.00am</h4>
                                     <h4 class="subheading">Health and Education Hackathon</h4>
                                 </div>
-<!--                                 <div class="timeline-body">
-                                    <p class="text-muted">"Session information Here (Not compulsory, I can take it out)"</p>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Conference Centre Board Room, University of Ibadan<p>
                                 </div>
- -->                            </div>
+                            </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
@@ -150,10 +152,10 @@
                                     <h4>19th September, 2015. 10.00am - 1.00pm</h4>
                                     <h4 class="subheading">Tech Session</h4>
                                 </div>
-<!--                                 <div class="timeline-body">
-                                    <p class="text-muted">"Session information Here (Not compulsory, I can take it out)"<p>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Conference Centre & Seminar Rooms, UI Hotels, University of Ibadan<p>
                                 </div>
- -->                            </div>
+                            </div>
                         </li>
                         <li>
                             <div class="timeline-image">
@@ -166,6 +168,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">FASHION, FINANCE, MEDIA & ENTREPRENEURSHIP SESSIONS</p>
+                                    <p class="text-muted">Conference Centre & Seminar Rooms, UI Hotels, University of Ibadan<p>
                                 </div>
                             </div>
                         </li>
@@ -223,7 +226,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4">
                     <div class="team-member">
-                        <div class="oo img-responsive img-circle">
+                        <div class="seun img-responsive img-circle">
                         </div>
                         <h4>Oluseun Onigbide</h4>
                         <p class="text-muted speaker-title">Co Founder, CALLBASE</p>
@@ -636,9 +639,9 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-<!--                         <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://twitter.com/smelldcoffeeng"><i class="fa fa-twitter"></i></a>
                         </li>
- -->                        <li><a href="https://www.facebook.com/SmelltheCoffeeng?fref=ts"><i class="fa fa-facebook"></i></a>
+                        <li><a href="https://www.facebook.com/SmelltheCoffeeng?fref=ts"><i class="fa fa-facebook"></i></a>
                         </li>
 <!--                         <li><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li> -->
