--- a/index.html
+++ b/index.html
@@ -199,6 +199,15 @@
             <div class="row">
                 <div class="col-sm-6 col-md-4">
                     <div class="team-member">
+                        <div class="seun img-responsive img-circle">
+                        </div>
+                        <h4>Oluseun Onigbide</h4>
+                        <p class="text-muted speaker-title">Lead Partner Budgit</p>
+                        <p class="text-muted">(2015)</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="team-member">
                         <div class="marek img-responsive img-circle">
                         </div>
                         <h4>Marek Zmylowski</h4>
@@ -221,15 +230,6 @@
                         </div>
                         <h4>Amaka Kentebe</h4>
                         <p class="text-muted speaker-title">Founder, SCUUP</p>
-                        <p class="text-muted">(2015)</p>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <div class="team-member">
-                        <div class="seun img-responsive img-circle">
-                        </div>
-                        <h4>Oluseun Onigbide</h4>
-                        <p class="text-muted speaker-title">Co Founder, CALLBASE</p>
                         <p class="text-muted">(2015)</p>
                     </div>
                 </div>
