--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
 
+eOL5Itt6iwNgn8v
+
+demo@yec.co
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -124,7 +128,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">EVENT TIMELINE</h2>
                     <h3 class="section-subheading text-muted event-year">2015</h3>
-                    <h3 class="section-subheading text-muted quick-info">1000+ students, 6 campuses</h3>
+                    <h3 class="section-subheading text-muted quick-info">4000 + ATTENDEES, 6 CAMPUSES</h3>
 
                 </div>
             </div>
