Add new speaker and contact details

--- a/index.html
+++ b/index.html
@@ -244,6 +244,15 @@
                         <p class="text-muted">(2015)</p>
                     </div>
                 </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="team-member">
+                        <div class="Dania img-responsive img-circle">
+                        </div>
+                        <h4>Dr. Simpa Dania</h4>
+                        <p class="text-muted speaker-title">Lead Consultant, Saboath Technologies</p>
+                        <p class="text-muted">(2015)</p>
+                    </div>
+                </div>
 
                 <div class="col-sm-6 col-md-4">
                     <div class="team-member">
@@ -525,7 +534,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal13" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -535,7 +544,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModa14" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal14" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -645,11 +654,15 @@
                         </li>
                         <li><a href="https://www.facebook.com/SmelltheCoffeeng?fref=ts"><i class="fa fa-facebook"></i></a>
                         </li>
-<!--                         <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li> -->
+                        <li><a href="mailto:christopher.ossai@gmail.com"><i class="fa fa-envelope"></i></a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="tel:+2348127082456">+234 812 7082 456</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
