--- a/index.html
+++ b/index.html
@@ -246,6 +246,15 @@
                 </div>
                 <div class="col-sm-6 col-md-4">
                     <div class="team-member">
+                        <div class="kuti img-responsive img-circle">
+                        </div>
+                        <h4>Femi Kuti</h4>
+                        <p class="text-muted speaker-title">Founder, TalentMine</p>
+                        <p class="text-muted">(2015)</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="team-member">
                         <div class="Dania img-responsive img-circle">
                         </div>
                         <h4>Dr. Simpa Dania</h4>
